Bug 487740 - When making text annotations, after selecting the text, pressing Ctrl+C will copy both the selected text and the whole screenshot to the clipboard
Summary: When making text annotations, after selecting the text, pressing Ctrl+C will ...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-29 12:52 UTC by Huanyu Liu
Modified: 2024-06-20 06:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Huanyu Liu 2024-05-29 12:52:35 UTC
SUMMARY
When making text annotations, after selecting the text, pressing Ctrl+C will copy both the selected text and the whole screenshot to the clipboard. I think the correct behavior is to copy the selected text only.

STEPS TO REPRODUCE
1. Take an arbitrary screenshot with Spectacle
2. Add some text using the annotation tool
3. Select some text and press Ctrl+C

OBSERVED RESULT
Both the selected text and the whole screenshot are copied to the clipboard

EXPECTED RESULT
Only the selected text should be copied to the clipboard

SOFTWARE/OS VERSIONS
Linux: 6.9.2-arch1-1
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.1

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-05-30 16:46:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/373
Comment 2 Noah Davis 2024-05-30 17:01:38 UTC
Git commit 04cbb5d6997f912b784d68654301d08f1eb24452 by Noah Davis.
Committed on 30/05/2024 at 16:58.
Pushed by ndavis into branch 'master'.

Prevent TextTool TextEdit shortcuts from being used by the window while TextTool is focused

M  +19   -31   src/Gui/CaptureWindow.cpp
M  +0    -1    src/Gui/CaptureWindow.h
M  +19   -31   src/Gui/ViewerWindow.cpp
M  +0    -1    src/Gui/ViewerWindow.h

https://invent.kde.org/graphics/spectacle/-/commit/04cbb5d6997f912b784d68654301d08f1eb24452
Comment 3 Noah Davis 2024-06-20 06:58:37 UTC
Git commit f5aff2d331f6dcc635a2e6292e073420febd47f4 by Noah Davis.
Committed on 20/06/2024 at 06:55.
Pushed by ndavis into branch 'release/24.05'.

Prevent TextTool TextEdit shortcuts from being used by the window while TextTool is focused


(cherry picked from commit 04cbb5d6997f912b784d68654301d08f1eb24452)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +19   -31   src/Gui/CaptureWindow.cpp
M  +0    -1    src/Gui/CaptureWindow.h
M  +19   -31   src/Gui/ViewerWindow.cpp
M  +0    -1    src/Gui/ViewerWindow.h

https://invent.kde.org/graphics/spectacle/-/commit/f5aff2d331f6dcc635a2e6292e073420febd47f4