Prevent TextTool TextEdit shortcuts from being used by the window while TextTool is focused

BUG: 487740